--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,8 +12,8 @@
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#projects">Werking van de Computer</a></li>
+                <li><a href="#binary">Binair Stelsel</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +25,7 @@
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h2>Werking van de Computer</h2>
         <div class="project">
             <h3>Project 1</h3>
             <p>Description of project 1.</p>
@@ -39,8 +38,9 @@
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
+        <h2>Hier is de uitleg</h2>
         <p>If you would like to get in touch, please email me at <a href="mailto:your.email@example.com">your.email@example.com</a>.</p>
+        <a href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID" target="_blank">Bekijk de uitleg op YouTube</a>
     </section>
 
     <footer>
