--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>My Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Werking van de Computer</a></li>
-                <li><a href="#binary">Binair Stelsel</a></li>
+                <li><a href="index.html#about">About Me</a></li>
+                <li><a href="computer.html">Werking van de Computer</a></li>
+                <li><a href="binary.html">Binair Stelsel</a></li>
             </ul>
         </nav>
     </header>
@@ -39,12 +39,7 @@
 
     <section id="contact">
         <h2>Hier is de uitleg</h2>
-        <p>If you would like to get in touch, please email me at <a href="mailto:your.email@example.com">your.email@example.com</a>.</p>
         <a href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID" target="_blank">Bekijk de uitleg op YouTube</a>
     </section>
-
-    <footer>
-        <p>&copy; 2024 My Portfolio</p>
-    </footer>
 </body>
 </html>
