--- a/binary.html
+++ b/binary.html
@@ -1,26 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Binair Stelsel</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Binair Stelsel</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html#about">About Me</a></li>
-                <li><a href="computer.html">Werking van de Computer</a></li>
-                <li><a href="binary.html">Binair Stelsel</a></li>
-            </ul>
-        </nav>
-    </header>
+.binary-content {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
+}
 
-    <section>
-        <h2>Welcome to the Binair Stelsel page!</h2>
-        <p>This is an empty page for now.</p>
-    </section>
-</body>
-</html>
+.binary-text, .binary-link {
+    flex: 1;
+    margin-right: 1rem;
+}
+
+.binary-link {
+    text-align: right;
+}
+
+.binary-link a {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    background: #6c757d; /* Gray button */
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.binary-link a:hover {
+    background: #5a6268; /* Darker gray on hover */
+}
