--- a/index.html
+++ b/index.html
@@ -19,22 +19,16 @@
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>Hello! I am a web developer with a passion for creating beautiful and functional websites.</p>
-        <img src="profile.jpg" alt="Profile Picture">
-    </section>
-
-    <section id="projects">
-        <h2>Werking van de Computer</h2>
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of project 1.</p>
+        <div class="about-container">
+            <div class="profile-image">
+                <img src="profile.jpg" alt="Profile Picture">
+            </div>
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p>Hello! I am a web developer with a passion for creating beautiful and functional websites.</p>
+                <h2>Werking van de Computer</h2>
+            </div>
         </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of project 2.</p>
-        </div>
-        <!-- Add more projects as needed -->
     </section>
 
     <section id="contact">
