--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html#about">About Me</a></li>
                 <li><a href="computer.html">Werking van de Computer</a></li>
                 <li><a href="binary.html">Binair Stelsel</a></li>
+                <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
             </ul>
         </nav>
     </header>
