--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -28,4 +28,10 @@
         <p><strong>Vectorafbeeldingen</strong> bestaan uit paden, gedefinieerd door wiskundige formules, waardoor ze oneindig schaalbaar zijn zonder kwaliteitsverlies. Ze worden vaak gebruikt voor logo's en illustraties. Voorbeelden van vectorformaten zijn SVG en EPS.</p>
         
         <h3>Sampling en Sample Rate</h3>
-        <p>Bij het digitaliseren van geluid wordt het analoge signaal omgezet
+        <p>Bij het digitaliseren van geluid wordt het analoge signaal omgezet in een digitale vorm door middel van sampling. Dit houdt in dat het geluid op vaste intervallen wordt gemeten. De <strong>sample rate</strong> verwijst naar het aantal metingen per seconde, uitgedrukt in Hertz (Hz). Een hogere sample rate resulteert in een nauwkeuriger representatie van het oorspronkelijke geluid.</p>
+        
+        <h3>Tekstcompressie</h3>
+        <p>Tekstcompressie is het proces waarbij tekstbestanden worden verkleind om opslagruimte te besparen. Dit kan worden bereikt door gebruik te maken van compressiealgoritmen zoals Huffman-codering of Lempel-Ziv-Welch (LZW). Door patronen in de tekst te identificeren en efficiëntere manieren te vinden om deze op te slaan, kan de bestandsgrootte aanzienlijk worden verminderd.</p>
+    </section>
+</body>
+</html>
