--- a/computer.html
+++ b/computer.html
@@ -14,13 +14,14 @@
                 <li><a href="index.html#about">About Me</a></li>
                 <li><a href="computer.html">Werking van de Computer</a></li>
                 <li><a href="binary.html">Binair Stelsel</a></li>
+                <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
             </ul>
         </nav>
     </header>
 
     <section>
-        <h2>Welcome to the Werking van de Computer page!</h2>
-        <p>This is an empty page for now.</p>
+        <h2>Werking van de Computer</h2>
+        <p>Hier komt de inhoud over de werking van de computer.</p>
     </section>
 </body>
 </html>
