--- a/binary.html
+++ b/binary.html
@@ -14,18 +14,19 @@
                 <li><a href="index.html#about">About Me</a></li>
                 <li><a href="computer.html">Werking van de Computer</a></li>
                 <li><a href="binary.html">Binair Stelsel</a></li>
+                <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="binary-content">
         <div class="binary-text">
-            <h2>Left Section</h2>
-            <p>Add your text here later.</p>
+            <h2>Binair Stelsel</h2>
+            <p>Hier komt de uitleg over het binair stelsel.</p>
         </div>
         <div class="binary-link">
             <h2>Check deze link!</h2>
-            <a href="https://games.penjee.com/binary-bonanza/" target="_blank">Binary Bonanza Game</a>
+            <a href="https://games.penjee.com/binary-bonanza/" target="_blank">Binary Bonanza</a>
         </div>
     </section>
 </body>
