--- a/binary.html
+++ b/binary.html
@@ -21,8 +21,15 @@
 
     <section class="binary-content">
         <div class="binary-text">
-            <h2>Binair Stelsel</h2>
-            <p>Hier komt de uitleg over het binair stelsel.</p>
+            <h2>Uitleg over het Binair Stelsel</h2>
+            <p>Het binaire stelsel is een talstelsel dat slechts twee cijfers gebruikt: 0 en 1. Dit systeem wordt veel gebruikt in computers en digitale systemen omdat het eenvoudig is om te implementeren met elektronische schakelaars.</p>
+            <p>In het binaire stelsel heeft elk cijfer (bit) een waarde die een macht van 2 vertegenwoordigt, afhankelijk van de positie van het cijfer. Bijvoorbeeld, het binaire getal 101 betekent:</p>
+            <ul>
+                <li>1 x 2^2 (1 x 4) = 4</li>
+                <li>0 x 2^1 (0 x 2) = 0</li>
+                <li>1 x 2^0 (1 x 1) = 1</li>
+            </ul>
+            <p>Dus, 101 in het binaire stelsel is gelijk aan 4 + 0 + 1 = 5 in het decimale stelsel.</p>
         </div>
         <div class="binary-link">
             <h2>Check deze link!</h2>
