--- a/computer.html
+++ b/computer.html
@@ -21,7 +21,19 @@
 
     <section>
         <h2>Werking van de Computer</h2>
-        <p>Hier komt de inhoud over de werking van de computer.</p>
+        <p>De werking van een computer kan worden beschreven aan de hand van vier basisprocessen: invoer, verwerking, uitvoer en opslag.</p>
+        
+        <h3>Invoer</h3>
+        <p>Bij invoer wordt informatie of gegevens ingevoerd in de computer via invoerapparaten zoals een toetsenbord, muis, scanner of microfoon.</p>
+
+        <h3>Verwerking</h3>
+        <p>De centrale verwerkingseenheid (CPU) van de computer verwerkt de ingevoerde gegevens. Dit houdt in dat de gegevens worden geïnterpreteerd, berekeningen worden uitgevoerd en instructies worden opgevolgd.</p>
+
+        <h3>Uitvoer</h3>
+        <p>Bij uitvoer worden de verwerkte gegevens omgezet in een leesbare vorm en weergegeven via uitvoerapparaten zoals een monitor, printer of luidsprekers.</p>
+
+        <h3>Opslag</h3>
+        <p>Gegevens kunnen tijdelijk of permanent worden opgeslagen op opslagmedia zoals een harde schijf, SSD, USB-stick of cloudopslag. Hierdoor kunnen de gegevens later worden opgevraagd en gebruikt.</p>
     </section>
 </body>
 </html>
