--- a/computer.html
+++ b/computer.html
@@ -34,6 +34,11 @@
 
         <h3>Opslag</h3>
         <p>Gegevens kunnen tijdelijk of permanent worden opgeslagen op opslagmedia zoals een harde schijf, SSD, USB-stick of cloudopslag. Hierdoor kunnen de gegevens later worden opgevraagd en gebruikt.</p>
+
+        <div class="playlist-section">
+            <p>Een playlist waarin uitgebreid wordt uitgelegd hoe de computer werkt en waaruit deze bestaat:</p>
+            <a href="https://www.youtube.com/playlist?list=PLzdnOPI1iJNcsRwJhvksEo1tJqjIqWbN-" target="_blank" class="playlist-button">Hoe Computers Werken</a>
+        </div>
     </section>
 </body>
 </html>
