--- a/computer.html
+++ b/computer.html
@@ -37,7 +37,7 @@
 
         <div class="playlist-section">
             <p>Een playlist waarin uitgebreid wordt uitgelegd hoe de computer werkt en waaruit deze bestaat:</p>
-            <a href="https://www.youtube.com/playlist?list=PLzdnOPI1iJNcsRwJhvksEo1tJqjIqWbN-" target="_blank" class="playlist-button">Hoe Computers Werken</a>
+            <a href="https://www.youtube.com/playlist?list=PLzdnOPI1iJNcsRwJhvksEo1tJqjIqWbN-" target="_blank" class="playlist-button">Hoe werken computers</a>
         </div>
     </section>
 </body>
