--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -10,13 +10,15 @@
     <header>
         <h1>Compressietechnieken</h1>
         <nav>
-            <ul>
-                <li><a href="index.html#about">About Me</a></li>
-                <li><a href="computer.html">Werking van de Computer</a></li>
-                <li><a href="binary.html">Binair Stelsel</a></li>
-                <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
-            </ul>
-        </nav>
+    <ul>
+        <li><a href="index.html#about">About Me</a></li>
+        <li><a href="computer.html">Werking van de Computer</a></li>
+        <li><a href="binary.html">Binair Stelsel</a></li>
+        <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
+        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+    </ul>
+</nav>
+
     </header>
 
     <section id="compressietechnieken">
