--- a/binary.html
+++ b/binary.html
@@ -9,14 +9,16 @@
 <body>
     <header>
         <h1>Binair Stelsel</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html#about">About Me</a></li>
-                <li><a href="computer.html">Werking van de Computer</a></li>
-                <li><a href="binary.html">Binair Stelsel</a></li>
-                <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
-            </ul>
-        </nav>
+      <nav>
+    <ul>
+        <li><a href="index.html#about">About Me</a></li>
+        <li><a href="computer.html">Werking van de Computer</a></li>
+        <li><a href="binary.html">Binair Stelsel</a></li>
+        <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
+        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+    </ul>
+</nav>
+
     </header>
 
     <section class="binary-content">
