--- a/index.html
+++ b/index.html
@@ -9,33 +9,27 @@
 <body>
     <header>
         <h1>My Portfolio</h1>
-       <nav>
-    <ul>
-        <li><a href="index.html#about">About Me</a></li>
-        <li><a href="computer.html">Werking van de Computer</a></li>
-        <li><a href="binary.html">Binair Stelsel</a></li>
-        <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
-        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-    </ul>
-</nav>
-
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="computer.html">Werking van de Computer</a></li>
+                <li><a href="binary.html">Binair Stelsel</a></li>
+                <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
+                <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section id="about">
         <div class="about-container">
             <div class="profile-image">
-                <img src="profile.jpg" alt="Profile Picture">
+                <img src="profile.jpg" alt="My Profile Picture">
             </div>
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>Hello! I am a web developer with a passion for creating beautiful and functional websites.</p>
+                <p>Hoi, ik ben Mark en dit is mijn portfolio website. Hier kun je informatie vinden over verschillende onderwerpen, zoals: binair stelsel, werking van de computer, persoonlijke informatie over mezelf en de uitlegvideo over hoe deze website werkt.</p>
             </div>
         </div>
-    </section>
-
-    <section id="contact">
-        <h2>Hier is de uitleg</h2>
-        <a href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID" target="_blank">Bekijk de uitleg op YouTube</a>
     </section>
 </body>
 </html>
