--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -34,7 +34,7 @@
         <p>Een pixel is de kleinste eenheid van een digitale afbeelding of scherm. Elke pixel kan een specifieke kleur aannemen, bepaald door de waarden in een kleurmodel zoals RGB. Resolutie verwijst naar het aantal pixels in een afbeelding of scherm. Hoe hoger de resolutie, hoe meer pixels er zijn en hoe scherper en gedetailleerder de afbeelding zal zijn. Resolutie wordt vaak uitgedrukt in termen van breedte x hoogte, zoals 1920x1080 (Full HD).</p>
 
         <div class="image-section">
-            <img src="kleur.jpg" alt="Kleurmodellen Image">
+            <img src="kleur.png" alt="Kleurmodellen Image">
         </div>
 
         <div class="video-section">
