--- a/computer.html
+++ b/computer.html
@@ -39,7 +39,7 @@
 
         <div class="playlist-section">
             <p>Een playlist waarin uitgebreid wordt uitgelegd hoe de computer werkt en waaruit deze bestaat:</p>
-            <a href="https://www.youtube.com/playlist?list=PLzdnOPI1iJNcsRwJhvksEo1tJqjIqWbN-" target="_blank" class="playlist-button">Hoe werken computers</a>
+            <a href="https://www.youtube.com/playlist?list=PLzdnOPI1iJNcsRwJhvksEo1tJqjIqWbN-" target="_blank" class="playlist-button">Werking van de computer (in het Engels)</a>
         </div>
     </section>
 </body>
