--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -21,20 +21,19 @@
     </header>
 
     <section>
-        <h2>RGB en CMY-K Kleurmodellen</h2>
-        <p>Kleurmodellen zijn manieren om kleuren te beschrijven en te reproduceren. De twee meest gebruikte kleurmodellen zijn RGB en CMY-K.</p>
+        <div class="text-with-image">
+            <h2>RGB en CMY-K Kleurmodellen</h2>
+            <img src="kleur.jpg" alt="Kleurmodellen Image" class="minimalistic-image">
+            <p>Kleurmodellen zijn manieren om kleuren te beschrijven en te reproduceren. De twee meest gebruikte kleurmodellen zijn RGB en CMY-K.</p>
 
-        <h3>RGB Kleurmodel</h3>
-        <p>RGB staat voor Rood, Groen en Blauw. Dit kleurmodel wordt voornamelijk gebruikt voor digitale schermen zoals monitors, televisies en smartphones. In het RGB-model worden kleuren gevormd door het combineren van de drie basiskleuren in verschillende intensiteiten. Het mengen van rood, groen en blauw licht in gelijke hoeveelheden resulteert in wit licht.</p>
+            <h3>RGB Kleurmodel</h3>
+            <p>RGB staat voor Rood, Groen en Blauw. Dit kleurmodel wordt voornamelijk gebruikt voor digitale schermen zoals monitors, televisies en smartphones. In het RGB-model worden kleuren gevormd door het combineren van de drie basiskleuren in verschillende intensiteiten. Het mengen van rood, groen en blauw licht in gelijke hoeveelheden resulteert in wit licht.</p>
 
-        <h3>CMY-K Kleurmodel</h3>
-        <p>CMY-K staat voor Cyaan, Magenta, Geel en Zwart (Key). Dit kleurmodel wordt voornamelijk gebruikt voor drukwerk. In tegenstelling tot het RGB-model, dat gebaseerd is op het toevoegen van licht, is het CMY-K-model subtractief. Dit betekent dat kleuren worden gecreëerd door licht te absorberen (of te verwijderen) in plaats van toe te voegen. De combinatie van cyaan, magenta en geel zou theoretisch zwart moeten opleveren, maar in de praktijk wordt zwart toegevoegd om diepere zwarttinten te bereiken.</p>
+            <h3>CMY-K Kleurmodel</h3>
+            <p>CMY-K staat voor Cyaan, Magenta, Geel en Zwart (Key). Dit kleurmodel wordt voornamelijk gebruikt voor drukwerk. In tegenstelling tot het RGB-model, dat gebaseerd is op het toevoegen van licht, is het CMY-K-model subtractief. Dit betekent dat kleuren worden gecreëerd door licht te absorberen (of te verwijderen) in plaats van toe te voegen. De combinatie van cyaan, magenta en geel zou theoretisch zwart moeten opleveren, maar in de praktijk wordt zwart toegevoegd om diepere zwarttinten te bereiken.</p>
 
-        <h3>Pixels en Resolutie</h3>
-        <p>Een pixel is de kleinste eenheid van een digitale afbeelding of scherm. Elke pixel kan een specifieke kleur aannemen, bepaald door de waarden in een kleurmodel zoals RGB. Resolutie verwijst naar het aantal pixels in een afbeelding of scherm. Hoe hoger de resolutie, hoe meer pixels er zijn en hoe scherper en gedetailleerder de afbeelding zal zijn. Resolutie wordt vaak uitgedrukt in termen van breedte x hoogte, zoals 1920x1080 (Full HD).</p>
-
-        <div class="image-section">
-            <img src="kleur.png" alt="Kleurmodellen Image">
+            <h3>Pixels en Resolutie</h3>
+            <p>Een pixel is de kleinste eenheid van een digitale afbeelding of scherm. Elke pixel kan een specifieke kleur aannemen, bepaald door de waarden in een kleurmodel zoals RGB. Resolutie verwijst naar het aantal pixels in een afbeelding of scherm. Hoe hoger de resolutie, hoe meer pixels er zijn en hoe scherper en gedetailleerder de afbeelding zal zijn. Resolutie wordt vaak uitgedrukt in termen van breedte x hoogte, zoals 1920x1080 (Full HD).</p>
         </div>
 
         <div class="video-section">
