--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -23,7 +23,7 @@
     <section>
         <div class="text-with-image">
             <h2>RGB en CMY-K Kleurmodellen</h2>
-            <img src="kleur.jpg" alt="Kleurmodellen Image" class="minimalistic-image">
+            <img src="kleur.png" alt="kleur.png" class="minimalistic-image">
             <p>Kleurmodellen zijn manieren om kleuren te beschrijven en te reproduceren. De twee meest gebruikte kleurmodellen zijn RGB en CMY-K.</p>
 
             <h3>RGB Kleurmodel</h3>
