--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
                 <img src="profile.jpg" alt="My Profile Picture">
             </div>
             <div class="about-text">
-                <h2>About Me</h2>
+                <h2>Over deze website</h2>
                 <p>Hoi, ik ben Mark en dit is mijn portfolio website. Hier kun je informatie vinden over verschillende onderwerpen, zoals: binair stelsel, werking van de computer, persoonlijke informatie over mezelf en de uitlegvideo over hoe deze website werkt.</p>
-                <h2>Mijn hobbies</h2>
-                <p>Voetbal, sportschool, vissen</p>
+                
+                <h2>Persoonlijke informate</h2>
+                <p> Ik ben 17 en ik zit in HAVO 4. 
+                Mijn hobbies zijn: voetbal, sportscool en vissen.</p>
+            
             </div>
         </div>
     </section>
