--- a/computer.html
+++ b/computer.html
@@ -38,7 +38,7 @@
         <p>Gegevens kunnen tijdelijk of permanent worden opgeslagen op opslagmedia zoals een harde schijf, SSD, USB-stick of cloudopslag. Hierdoor kunnen de gegevens later worden opgevraagd en gebruikt.</p>
 
         <div class="playlist-section">
-            <p>Een playlist waarin uitgebreid wordt uitgelegd hoe de computer werkt en waaruit deze bestaat:</p>
+            <p>Een playlist waarin uitgebreid wordt uitgelegd hoe computers werken en waaruit deze bestaan:</p>
             <a href="https://www.youtube.com/playlist?list=PLzdnOPI1iJNcsRwJhvksEo1tJqjIqWbN-" target="_blank" class="playlist-button">Werking van de computer (in het Engels)</a>
         </div>
     </section>
