--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             </div>
             <div class="about-text">
                 <h2>Over deze website</h2>
-                <p>Hoi, ik ben Mark en dit is mijn portfolio website. Hier kun je informatie vinden over verschillende onderwerpen, zoals: binair stelsel, werking van de computer, persoonlijke informatie over mezelf en de uitlegvideo over hoe deze website werkt.</p>
+                <p>Hoi, ik ben Mark en dit is mijn portfolio website. Hier kun je informatie vinden over verschillende onderwerpen: binair stelsel, werking van de computer en persoonlijke informatie over mezelf.</p>
                 
                 <h2>Persoonlijke informate</h2>
-                <p> Ik ben 17 en ik zit in HAVO 4. 
-                Mijn hobbies zijn: voetbal, sportscool en vissen.</p>
+                <p> Ik ben 17 en ik zit in HAVO 4.</p>
+                <p>  Mijn hobbies zijn: voetbal, sportscool en vissen</p>
             
             </div>
         </div>
