--- a/index.html
+++ b/index.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Mijn Portfolio</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Verwijzing naar de CSS -->
 </head>
 <body>
+    <!-- Header sectie met navigatie -->
     <header>
-        <h1>My Portfolio</h1>
+        <h1>Mijn Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="computer.html">Werking van de Computer</a></li>
-                <li><a href="binary.html">Binair Stelsel</a></li>
-                <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
-                <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+                <li><a href="#about">About Me</a></li> <!-- Link naar About Me  -->
+                <li><a href="computer.html">Werking van de Computer</a></li> <!-- Link naar de Werking van de Computer -->
+                <li><a href="binary.html">Binair Stelsel</a></li> <!-- Link naar de Binair Stelsel  -->
+                <li><a href="compressietechnieken.html">Compressietechnieken</a></li> <!-- Link naar de Compressietechnieken pagina -->
+                <li><a href="kleurmodellen.html">Kleurmodellen</a></li> <!-- Link naar de Kleurmodellen pagina -->
             </ul>
         </nav>
     </header>
 
+    <!-- About Me sectie -->
     <section id="about">
         <div class="about-container">
             <div class="profile-image">
-                <img src="profile.jpg" alt="My Profile Picture">
+                <img src="profile.jpg" alt="Mijn Profielfoto"> <!-- Profielfoto -->
             </div>
             <div class="about-text">
-                <h2>Over deze website</h2>
-                <p>Hoi, ik ben Mark en dit is mijn portfolio website. Hier kun je informatie vinden over verschillende onderwerpen: binair stelsel, werking van de computer en persoonlijke informatie over mezelf.</p>
-                
-                <h2>Persoonlijke informate</h2>
-                <p> Ik ben 17 en ik zit in HAVO 4.</p>
-                <p>  Mijn hobbies zijn: voetbal, sportscool en vissen</p>
-            
+                <h2>About Me</h2>
+                <p>Hoi, ik ben Mark en dit is mijn portfolio website. Hier kun je informatie vinden over verschillende onderwerpen, zoals: binair stelsel, werking van de computer, persoonlijke informatie over mezelf en de uitlegvideo over hoe deze website werkt.</p>
+                <h2>Mijn hobbies</h2>
+                <p>Voetbal, sportschool, vissen</p>
             </div>
         </div>
     </section>
