--- a/computer.html
+++ b/computer.html
@@ -1,46 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Werking van de Computer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Verwijzing naar de CSS-->
 </head>
 <body>
-    <header>
-        <h1>Werking van de Computer</h1>
-       <nav>
-    <ul>
-        <li><a href="index.html#about">About Me</a></li>
-        <li><a href="computer.html">Werking van de Computer</a></li>
-        <li><a href="binary.html">Binair Stelsel</a></li>
-        <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
-        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-    </ul>
-</nav>
-
-    </header>
-
+    <!-- Inhoud sectie -->
     <section>
         <h2>Werking van de Computer</h2>
-        <p>De werking van een computer kan worden beschreven aan de hand van vier basisprocessen: invoer, verwerking, uitvoer en opslag.</p>
-        
-        <h3>Invoer</h3>
-        <p>Bij invoer wordt informatie of gegevens ingevoerd in de computer via invoerapparaten zoals een toetsenbord, muis, scanner of microfoon.</p>
-
-        <h3>Verwerking</h3>
-        <p>De centrale verwerkingseenheid (CPU) van de computer verwerkt de ingevoerde gegevens. Dit houdt in dat de gegevens worden geïnterpreteerd, berekeningen worden uitgevoerd en instructies worden opgevolgd.</p>
-
-        <h3>Uitvoer</h3>
-        <p>Bij uitvoer worden de verwerkte gegevens omgezet in een leesbare vorm en weergegeven via uitvoerapparaten zoals een monitor, printer of luidsprekers.</p>
-
-        <h3>Opslag</h3>
-        <p>Gegevens kunnen tijdelijk of permanent worden opgeslagen op opslagmedia zoals een harde schijf, SSD, USB-stick of cloudopslag. Hierdoor kunnen de gegevens later worden opgevraagd en gebruikt.</p>
-
-        <div class="playlist-section">
-            <p>Een playlist waarin uitgebreid wordt uitgelegd hoe computers werken en waaruit deze bestaan:</p>
-            <a href="https://www.youtube.com/playlist?list=PLzdnOPI1iJNcsRwJhvksEo1tJqjIqWbN-" target="_blank" class="playlist-button">Werking van de computer (in het Engels)</a>
-        </div>
+        <p>De werking van de computer kan worden beschreven door het proces van invoer, verwerking, uitvoer en opslag.</p>
+        <p>Invoer: Dit is de informatie die de computer ontvangt via invoerapparaten zoals toetsenborden en muizen.</p>
+        <p>Verwerking: De computer verwerkt de ontvangen informatie door middel van de CPU (Central Processing Unit).</p>
+        <p>Uitvoer: De verwerkte informatie wordt getoond op uitvoerapparaten zoals monitoren en printers.</p>
+        <p>Opslag: De informatie kan worden opgeslagen op opslagapparaten zoals harde schijven en SSD's.</p>
     </section>
+
+    <!-- Playlist knop -->
+    <div class="playlist-section">
+        <p>Een playlist waarin uitgebreid wordt uitgelegd hoe de computer werkt en waaruit deze bestaat.</p>
+        <a href="https://www.youtube.com/playlist?list=your_playlist_id" target="_blank" class="playlist-button">Hoe computers werken</a> <!-- Link naar de YouTube playlist -->
+    </div>
 </body>
 </html>
