--- a/binary.html
+++ b/binary.html
@@ -1,42 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Binair Stelsel</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Verwijzing naar de CSS-->
 </head>
 <body>
-    <header>
-        <h1>Binair Stelsel</h1>
-      <nav>
-    <ul>
-        <li><a href="index.html#about">About Me</a></li>
-        <li><a href="computer.html">Werking van de Computer</a></li>
-        <li><a href="binary.html">Binair Stelsel</a></li>
-        <li><a href="compressietechnieken.html">Compressietechnieken</a></li>
-        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
-    </ul>
-</nav>
-
-    </header>
-
-    <section class="binary-content">
-        <div class="binary-text">
-            <h2>Uitleg over het Binair Stelsel</h2>
-            <p>Het binaire stelsel is een talstelsel dat slechts twee cijfers gebruikt: 0 en 1. Dit systeem wordt veel gebruikt in computers en digitale systemen omdat het eenvoudig is om te implementeren met elektronische schakelaars.</p>
-            <p>In het binaire stelsel heeft elk cijfer (bit) een waarde die een macht van 2 vertegenwoordigt, afhankelijk van de positie van het cijfer. Bijvoorbeeld, het binaire getal 101 betekent:</p>
-            <ul>
-                <li>1 x 2^2 (1 x 4) = 4</li>
-                <li>0 x 2^1 (0 x 2) = 0</li>
-                <li>1 x 2^0 (1 x 1) = 1</li>
-            </ul>
-            <p>Dus, 101 in het binaire stelsel is gelijk aan 4 + 0 + 1 = 5 in het decimale stelsel.</p>
-        </div>
-        <div class="binary-link">
-            <h2>Check deze link!</h2>
-            <a href="https://games.penjee.com/binary-bonanza/" target="_blank">Binary Bonanza</a>
-        </div>
+    <!-- Inhoud  -->
+    <section>
+        <h2>Binair Stelsel</h2>
+        <p>Het binaire stelsel is een talstelsel dat alleen de cijfers 0 en 1 gebruikt. Dit stelsel wordt veel gebruikt in computers en digitale systemen omdat het gemakkelijk door elektronische schakelaars kan worden verwerkt.</p>
+        <p>In het binaire stelsel wordt elke positie in een getal vertegenwoordigd door een macht van 2, in plaats van een macht van 10 zoals in het decimale stelsel. Bijvoorbeeld, het binaire getal 101 betekent 1×2^2 + 0×2^1 + 1×2^0, wat gelijk is aan 5 in het decimale stelsel.</p>
     </section>
 </body>
 </html>
