--- a/computer.html
+++ b/computer.html
@@ -37,7 +37,7 @@
 
         <div class="playlist-section">
             <p>Een playlist waarin uitgebreid wordt uitgelegd hoe de computer werkt en waaruit deze bestaat:</p>
-            <a href="https://www.youtube.com/playlist?list=PLRKHTAcTJp9aoo7Gy1YDy1n4dbuIOZieO" target="_blank" class="playlist-button">Werking van de computers (in het Engels)</a>
+            <a href="https://www.youtube.com/playlist?list=PLRKHTAcTJp9aoo7Gy1YDy1n4dbuIOZieO" target="_blank" class="playlist-button">Werking van de computer (in het Engels)</a>
         </div>
     </section>
 </body>
