--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>Hoi, ik ben Mark en dit is mijn portfolio website. Hier kun je informatie vinden over verschillende onderwerpen, zoals: binair stelsel, werking van de computer, persoonlijke informatie over mezelf en de uitlegvideo over hoe deze website werkt.</p>
-                <h2>Mijn hobbies</h2>
+                <p>Hoi, ik ben Mark en dit is mijn portfolio website. Hier kun je informatie vinden over verschillende onderwerpen: binair stelsel, werking van de computer , compressietechnieken en persoonlijke informatie over mezelf .</p>
+                <h2>Mijn hobbies:</h2>
                 <p>Voetbal, sportschool, vissen</p>
             </div>
         </div>
